// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestSuite tests Snapshots should create proper elements for large test more than 500 tests 1`] = `
Array [
  <div
    class="my-3 p-3 bg-white rounded box-shadow card failed-test.passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___example_FailingTests_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___example_FailingTests_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\example\\FailingTests.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              2
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___example_FailingTests_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow failed-test.passed-test"
          id="Failing Tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Failing Tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_render_Render_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_render_Render_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\render\\Render.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_render_Render_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Render tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Render tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_processor_Processor_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_processor_Processor_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\processor\\Processor.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              2
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_processor_Processor_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Processor tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Processor tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_utils_IO_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_utils_IO_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\utils\\IO.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              4
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_utils_IO_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="IO tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            IO tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_utils_Logger_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_utils_Logger_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\utils\\Logger.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_utils_Logger_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Logger tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Logger tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_reporter_Reporter_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_reporter_Reporter_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\reporter\\Reporter.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              2
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_reporter_Reporter_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Reporter tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Reporter tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TestSuite tests Snapshots should create proper elements for simple failing tests 1`] = `
Array [
  <div
    class="my-3 p-3 bg-white rounded box-shadow card failed-test.passed-test"
  >
    <div
      class="card-header"
      id="Work_Dev_node_jest-stare___tests___utils_IO_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#Work_Dev_node_jest-stare___tests___utils_IO_test_ts_detail"
          data-toggle="collapse"
        >
          Work\\Dev\\node\\jest-stare\\__tests__\\utils\\IO.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              2
            </span>
            <span
              class="badge badge-danger border"
            >
              2
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="Work_Dev_node_jest-stare___tests___utils_IO_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow failed-test.passed-test"
          id="IO tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            IO tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_detail"
          data-toggle="collapse"
        >
          Work\\Dev\\node\\jest-stare\\__tests__\\reporter\\Reporter.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Reporter tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Reporter tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TestSuite tests Snapshots should create proper elements for simple passing tests 1`] = `
Array [
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="Work_Dev_node_jest-stare___tests___utils_IO_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#Work_Dev_node_jest-stare___tests___utils_IO_test_ts_detail"
          data-toggle="collapse"
        >
          Work\\Dev\\node\\jest-stare\\__tests__\\utils\\IO.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              4
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="Work_Dev_node_jest-stare___tests___utils_IO_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="IO tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            IO tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_detail"
          data-toggle="collapse"
        >
          Work\\Dev\\node\\jest-stare\\__tests__\\reporter\\Reporter.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="Work_Dev_node_jest-stare___tests___reporter_Reporter_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Reporter tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Reporter tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TestSuite tests Snapshots should create proper elements for two diffs in html 1`] = `
Array [
  <div
    class="my-3 p-3 bg-white rounded box-shadow card failed-test.passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___example_FailingTests_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___example_FailingTests_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\example\\FailingTests.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              2
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___example_FailingTests_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow failed-test.passed-test"
          id="Failing Tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Failing Tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_render_Render_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_render_Render_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\render\\Render.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_render_Render_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Render tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Render tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_processor_Processor_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_processor_Processor_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\processor\\Processor.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              2
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_processor_Processor_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Processor tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Processor tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_utils_IO_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_utils_IO_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\utils\\IO.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              4
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_utils_IO_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="IO tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            IO tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_utils_Logger_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_utils_Logger_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\utils\\Logger.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              1
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_utils_Logger_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Logger tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Logger tests
          </h6>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="my-3 p-3 bg-white rounded box-shadow card passed-test"
  >
    <div
      class="card-header"
      id="jest-stare___tests___src_reporter_Reporter_test_ts_header"
    >
      <h5
        class="border-bottom pb-2 mb-0 display-5"
      >
        <button
          class="btn btn-block"
          data-target="#jest-stare___tests___src_reporter_Reporter_test_ts_detail"
          data-toggle="collapse"
        >
          jest-stare\\__tests__\\src\\reporter\\Reporter.test.ts
          <div>
            <span
              class="badge badge-success border"
            >
              2
            </span>
            <span
              class="badge badge-danger border"
            >
              0
            </span>
            <span
              class="badge badge-warning border"
            >
              0
            </span>
          </div>
        </button>
      </h5>
    </div>
    <div
      class="collapse"
      data-parent="#accordion"
      id="jest-stare___tests___src_reporter_Reporter_test_ts_detail"
    >
      <div
        class="card-body"
      >
        <div
          class="my-3 p-3 bg-white rounded box-shadow passed-test"
          id="Reporter tests"
        >
          <h6
            class="border-bottom pb-2 mb-0 display-6"
          >
            Reporter tests
          </h6>
          <div>
            dummy div
          </div>
          <div>
            dummy div
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
